# zakuro

./: .docker.sh.swp  .env.template  .gitignore  Dockerfile  Makefile  README.md  Taskfile.yml  compose.yaml  docker-compose.yml  docker.sh  install.sh  pyproject.toml  requirements.txt  setup  setup.py  test_api_default.py
.github/workflows/: build.yml  publish.yml  test.yml
docker/: Dockerfile  Dockerfile.broker  Dockerfile.demo  benchmark-p2p.sh  docker-compose.bench.yml  docker-compose.mesh.yml  docker-compose.tailscale.yml  docker-compose.yml  init-credits.sh  init-mesh.sh  mesh-demo.py  run-benchmarks.py  tailscale-entrypoint.sh  test-single-node.sh
scripts/: demo_broker.sh
taskfiles/: build.yml  ci.yml  deploy.yml  docker.yml  test.yml
tests/: __init__.py  conftest.py  test_compute.py  test_config.py  test_fn.py  test_processors.py  test_serialization.py
zakuro/: __init__.py  build  client.py  compute.py  config.py  config.yaml  config.yml  discovery.py  fn.py  functional.py  pkg_info.py  proxy.py  var.py  worker.py
zakuro/hub/: functional.py
zakuro/nn/: functional.py
zakuro/parsers/: zakuro_config_loader.py
zakuro/processors/: __init__.py  base.py  broker.py  dask_processor.py  http.py  ray_processor.py  registry.py  spark_processor.py
zakuro/worker/: __init__.py  __main__.py  executor.py  server.py
