[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zakuro-ai"
dynamic = ["version"]
description = "Zakuro - Distributed computing made simple"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "ZakuroAI", email = "dev@zakuro.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "cloudpickle>=3.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "minio>=7.0.0",
]

[project.optional-dependencies]
worker = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "psutil>=5.9.0",
]
ray = ["ray>=2.0.0"]
dask = ["dask>=2023.0.0", "distributed>=2023.0.0"]
spark = ["pyspark>=3.0.0"]
all-processors = ["zakuro-ai[ray,dask,spark]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = ["zakuro-ai[worker,dev,all-processors]"]

[project.urls]
Homepage = "https://zakuro.ai"
Documentation = "https://docs.zakuro.ai"
Repository = "https://github.com/zakuro-ai/zak-zakuro"

[project.scripts]
zakuro-worker = "zakuro.worker.server:main"

[tool.hatch.version]
path = "zakuro/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["zakuro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=zakuro --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
